# work-tracker-web

./: .eslintrc  .gitignore  .prettierrc  Cargo.toml  README.md  package-lock.json  package.json  svelte.config.js
src/: main.rs
src/lib/adwaita/: Box.svelte  Button.svelte  Label.svelte  adwaita.css
src/pages/: mod.rs
src/pages/download/: controller.rs  mod.rs
src/pages/home/: controller.rs  mod.rs
src/routes/: +layout.svelte  +page.svelte  Counter.svelte  Header.svelte  Logo.svelte  styles.css
src/routes/sverdle/: +page.server.ts  +page.svelte
src/utils/: auto_refresh.rs  mod.rs  ssr.rs
static/: autorefresh.js
templates/main/: page.html
templates/pages/download/: page.html  platform_options.html
templates/pages/home/: page.html
