[package]
name = "work-tarcker-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
chrono = "0.4.26"
sailfish = "0.7.0"
serde = { version = "1.0.171", features = ["derive"] }
